Chore: add POST request
